--- a/index.html
+++ b/index.html
@@ -6,16 +6,54 @@
     <title>Tienda DecoHome</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
     />
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Cabecera de la página -->
+    <header>
+      <nav class="navbar navbar-color">
+        <div
+          class="container d-flex justify-content-between align-items-center"
+        >
+          <div>
+            <a class="navbar-brand" href="#">
+              <img
+                src="assets/img/icono-tiendaH&K.png"
+                alt="Pastel"
+                width="70"
+                height="70"
+              />H&K
+            </a>
+          </div>
+          <div class="nav-links d-flex gap-3">
+            <a href="#contenedor-productos" class="nav-link">Productos</a>
+            <a href="#carrito.html" class="nav-link">Carrito</a>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <!-- Inicio de la Página -->
+      <section id="img-fondoInicio" class="d-flex align-items-center">
+        <div class="container text-center text-white">
+          <h1>Bienvenidos a H&K</h1>
+          <p class="lead">Tu tienda con todo lo que necesitas en tu hogar</p>
+          <a href="#contenedor-productos" class="btn btn-secondary btn-lg"
+            >Explorar Productos</a
+          >
+        </div>
+      </section>
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/index.js"></script>
   </body>
 </html>
