--- a/detallesproducto.html
+++ b/detallesproducto.html
@@ -20,13 +20,14 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
   </head>
-  <body>
-    <!-- Cabecera de la página -->
-    <header class="sticky-top bg-light">
+
+  <body class="d-flex flex-column min-vh-100">
+    <!-- Cabecera de la pagina -->
+  <header class="sticky-top bg-light">
       <nav class="navbar sticky-top">
         <div
           class="container d-flex justify-content-between align-items-center"
-        >
+          >
           <div>
             <a class="navbar-brand" href="#">
               <img
@@ -38,7 +39,7 @@
             </a>
           </div>
           <div class="nav-links d-flex align-items-center gap-3">
-            <a href="#contenedor-productos" class="nav-link">Productos</a>
+            <a href="index.html" class="nav-link">Productos</a>
             <button
               class="btn btn-light position-relative"
               type="button"
@@ -60,32 +61,15 @@
       </nav>
     </header>
 
-    <main>
-      <!-- Inicio de la Página -->
-      <section id="img-fondoInicio" class="d-flex align-items-center">
-        <div class="container text-center text-white">
-          <h1>Bienvenidos a H&K</h1>
-          <p class="lead">Tu tienda con todo lo que necesitas en tu hogar</p>
-          <a href="#contenedor-productos" class="btn btn-secondary btn-lg"
-            >Explorar Productos</a
-          >
-        </div>
-      </section>
+    <!-- Seccion de detalle del producto -->
+    <section class="container mt-5 mb-5">
 
-      <section id="contenedor-productos">
-        <div>
-          <h2 class="text-center mb-5 mt-5">Nuestros Productos</h2>
-          <div class="container mb-5">
-            <div
-              id="tarjetas-productos"
-              class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4"
-            ></div>
-          </div>
-        </div>
-      </section>
-    </main>
-    <!-- Footer -->
-    <footer class="bg-black text-center">
+      <div id="contenedor">
+      </div>
+    </section>
+
+    <!-- Pie de la pagina -->
+    <footer class="bg-black text-center mt-auto">
       <div class="container">
         <p class="text-light pt-3 mb-2">
           <i class="fas fa-map-marker-alt text-light"></i> Calle Bernardo
@@ -106,11 +90,12 @@
         <div class="text-light pb-3">H&K todos los derechos reservados.</div>
       </div>
     </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/detallesproducto.js"></script>
   </body>
 </html>
